Thu Apr 29 12:33:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/thwait.rb (ThreadsWait#join): refined rdoc.  [ruby-core:29863]

Thu Apr 29 12:16:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert): reject
	  non-boolean values.  [ruby-core:29868]

Thu Apr 29 11:20:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (seek_before_access): renamed.  see [ruby-core:29861].

	* io.c (rb_io_s_binread): fixed rdoc.  parts of a patch from Roger
	  Pack in [ruby-core:29861].

Thu Apr 29 03:50:49 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/xmlrpc/utils.rb: Fixing an incompatibility with
	  reflection methods returning Symbols.  Patch by
	  HD Moore.  [ruby-core:29821]

Wed Apr 28 23:53:15 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/thwait.rb: revise rdoc.  a patch from Roger Pack in
	  [ruby-core:27362].

Wed Apr 28 23:21:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Update to JSON 1.4.2.

Wed Apr 28 22:53:57 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread. (rb_thread_terminate_all): revert r24591 which caused SEGV
	  sometimes.  [ruby-dev:40936] [ruby-core:27245] [ruby-core:27416]

Wed Apr 28 22:26:55 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/psych/visitors/test_yaml_tree.rb (test_struct_const): remove
	  Struct::Foo which affects test/ruby/test_struct to warn redefining
	  constant.

Wed Apr 28 18:04:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_timespec): use rb_check_funcall.

Wed Apr 28 17:14:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb: CMSG_ macros are broken on 64bit darwin,
	  because of use of __DARWIN_ALIGN.

Wed Apr 28 16:44:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h ({RSTRING,RSTRUCT,RBIGNUM}_LENINT): check long
	  to cast to int.

Wed Apr 28 16:28:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/unixsocket.c (sendmsg_blocking, recvmsg_blocking):